# ceo-command-center

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: build-phase.md  verify-all.md
.streamlit/: config.toml
ai/: alert_generator.py  anomaly_detector.py  cache_manager.py  chat_engine.py  engine.py  forecaster.py  whatif_simulator.py
ai/prompts/: __init__.py  briefing_prompts.py  cashflow_prompts.py  chat_prompts.py  expenses_prompts.py  financial_prompts.py  inventory_prompts.py  payables_prompts.py  receivables_prompts.py  sales_prompts.py
analytics/: budget_projector.py  cashflow_analytics.py  expense_analytics.py  financial_analytics.py  inventory_analytics.py  kpi_calculator.py  payables_analytics.py  receivables_analytics.py  sales_analytics.py
app/: Home.py
app/components/: ai_analysis_box.py  alerts_panel.py  auth.py  charts.py  icons.py  kpi_cards.py  page_header.py  sidebar.py  tables.py  theme.py  whatif_panel.py
app/pages/: 10_Presupuesto.py  1_Ventas.py  2_Cuentas_por_Cobrar.py  3_Cuentas_por_Pagar.py  4_Inventarios.py  5_Gastos.py  6_Financiero.py  7_Flujo_de_Caja.py  8_AI_Chat.py  9_Importar_Datos.py
backend/: Dockerfile
config/: ai_config.py  auth_config.yaml  logging_config.py  odoo_config.py  settings.py
database/: db_manager.py  schema.sql
docs/: odoo_models.md  project_spec.md  roadmap_producto_final.html
etl/: file_importer.py
scripts/: generate_demo_data.py  init_db.py  migrate_config_budgets.py  run.sh
tests/: conftest.py  test_analytics.py  test_budget_projector.py  test_kpi_calculator.py
(+29 files in other folders)
